tests/golden/type_errors/module_private_name_deps/lib.cd
let secret = 1;
let visible = 2;
export visible;
